# paper-to-skill

./: .gitignore  CONTRIBUTING.md  README.md  README_zh.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
paper_to_skill/: __init__.py  __main__.py  cli.py  config.py  dependencies.py  exceptions.py  extractor.py  resolver.py  utils.py
paper_to_skill/parsers/: pdf.py
references/: workflow.md
scripts/: extract.py
tests/: __init__.py  test_config.py  test_dependencies.py  test_extractor.py  test_resolver.py  test_utils.py
tools/: discovery_tax.py  validate_skill.py
