[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-to-skill"
version = "1.0.0"
description = "Convert research paper PDFs into structured, on-demand agent skills for Claude Code and OpenCode."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
paper-to-skill = "paper_to_skill.cli:main"

[project.optional-dependencies]
pdf = ["pypdf", "pdfminer.six"]
technical = ["docling"]
all = [
    "pypdf",
    "pdfminer.six",
    "docling"
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
